--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/krmc/job/ohYuafwD'>Kingman Regional Medical Center Careers - Speech Language Pathologist -Therapy Services - Kingman, Arizona - Per Diem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/krmc/job/ohYuafwD'>Kingman Regional Medical Center Careers - Speech Language Pathologist -Therapy Services - Kingman, Arizona - Per Diem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://careers-therapymgmt.icims.com/jobs/6329/full-time-speech-language-pathologist---alexandria%2C-la/job'>Full Time Speech Language Pathologist - Alexandria, LA in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6329/full-time-speech-language-pathologist---alexandria%2C-la/job'>Full Time Speech Language Pathologist - Alexandria, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... We are committed to making a positive difference in the lives of those we serve. 
 As a physical, occupational, or speech therapist, we will provide you with all the?...</p>
@@ -151,7 +151,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/1Legacy1/743999687097675-speech-therapist'>1 Legacy Speech Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/1Legacy1/743999687097675-speech-therapist'>1 Legacy Speech Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -163,7 +163,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -171,11 +171,11 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999691442073-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999691442073-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... Manistee County Medical Care Facility is now hiring a Speech Language 
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
@@ -253,7 +253,7 @@ details?...</p>
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349808002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349808002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -261,7 +261,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349820002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349820002'>Job Application for ST, Speech Therapist, Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -309,7 +309,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999691163315-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999691163315-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -378,7 +378,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -394,7 +394,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4338876002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4338876002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -422,7 +422,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
